--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,27 @@
-/* Enter your custom styles here */
+
+.customVBox {
+    text-align: center;
+}
+
+
+.customTitle {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+
+.customHBox {
+    margin-bottom: 20px;
+}
+
+
+.customInput {
+    font-size: 16px;
+    padding: 5px;
+}
+
+
+.customTable {
+    width: 50%; 
+}
