--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,7 +1,76 @@
-<mvc:View controllerName="com.bootcamp.sapui5.finalproject.controller.App"
-    displayBlock="true"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m">
+<mvc:View controllerName="com.bootcamp.sapui5.finalproject.controller.Detail"
+    xmlns="sap.m"
+	xmlns:c="sap.ui.core"
+    xmlns:l="sap.ui.layout"
+	xmlns:f="sap.ui.layout.form"
+	xmlns:mvc="sap.ui.core.mvc"
+    xmlns:smartTable="sap.ui.comp.smarttable">
     <Page>
+
+    	<f:SimpleForm id="SimpleFormChange480_12120"
+			editable="true"
+			layout="ResponsiveGridLayout"
+			title="Address"
+			labelSpanXL="4"
+			labelSpanL="4"
+			labelSpanM="12"
+			labelSpanS="12"
+			adjustLabelSpan="false"
+			emptySpanXL="0"
+			emptySpanL="0"
+			emptySpanM="0"
+			emptySpanS="0"
+			columnsXL="2"
+			columnsL="2"
+			columnsM="1"
+			singleContainerFullSize="false" >
+			<f:content>
+				<c:Title text="{i18n>personalDetailInfo}" />
+
+				<Label text="{i18n>Supplier}" />
+				<Text text="{ContactName}" />
+
+				<Label text="{i18n>ContactTitle}" />
+				<Text text="{ContactTitle}"/>
+
+                <Label text="{i18n>Phone}" />
+				<Text text="{Phone}"/>
+							
+				<c:Title text="{i18n>WorkInfo}" />
+
+                <Label text="{i18n>CompanyName}" />
+                <Text text="{CompanyName}" />
+
+				<Label text="{i18n>Address}" />
+				<Text text="{Address}"/>
+				
+				<Label text="{i18n>City}" />
+				<Text text="{City}" />
+                
+				<Label text="{i18n>Country}" />
+                <Text text="{Country}" />
+			</f:content>
+		</f:SimpleForm>
+
+		<smartTable:SmartTable 
+            entitySet="Products" 
+            smartFilterId="smartFilterBar"
+            tableBindingPath="Products"
+            initiallyVisibleFields="ProductID,ProductName,UnitPrice"
+			tableType="ResponsiveTable" 
+            enableExport="true" 
+            beforeExport="onBeforeExport"
+			useVariantManagement="true" 
+            useTablePersonalisation="true" 
+            header="Line Items"
+			showRowCount="true" 
+            persistencyKey="SmartTableAnalytical_Explored" 
+            enableAutoBinding="true"
+			demandPopin="true" 
+            class="sapUiResponsiveContentPadding" 
+            showDetailsButton="true" 
+            enableAutoColumnWidth="true" 
+            editTogglable="false"/>
+
     </Page>
 </mvc:View>
